# CoorChiceLibOne

./: README.md  RoundCornerTextView.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.cpp  common.h  config.h  decoder.cpp  decoder.h  dgif_lib.c  drawer.cpp  drawer.h  egif_lib.c  gif_hash.c  gif_hash.h  gif_lib.h  gif_lib_private.h  gifalloc.c  gifinfo.cpp  gifinfo.h  jni.cpp  reallocarray.c
app/src/main/res/anim/: slide_in_from_bottom_hurry.xml  slide_out_to_bottom_hurry.xml
app/src/main/res/drawable/: bg_fliggy_buy_switch_thumb.xml  bg_fliggy_buy_switch_track_off.xml  bg_fliggy_buy_switch_track_on.xml  checkbox_v1.xml  circle.xml  divider_shape.xml  et_bg_round_shape.xml  et_input_code.xml  navigator_shape.xml  opacity_1_black_round_shape.xml  thumb_fliggy_buy_switch.xml
app/src/main/res/layout/: activity_accessibility.xml  activity_analyze_view_framwork.xml  activity_annotation.xml  activity_artist.xml  activity_bear.xml  activity_calendar.xml  activity_camera.xml  activity_camera_demo.xml  activity_crack_password.xml  activity_custem_layout_manager.xml  activity_dragger_recycler_view.xml  activity_draw.xml  activity_draw2.xml  activity_draw_text.xml  activity_flight_filter.xml  activity_flutter.xml  activity_gif_decoder.xml  activity_header_footer_recycler_view.xml  activity_horizontal_pinterest.xml  activity_log.xml  activity_main.xml  (+37 more)
gradle/wrapper/: gradle-wrapper.properties
javagui/: build.gradle
testlib/: build.gradle
(+276 files in other folders)
